fixed background video not covering all

--- a/style.css
+++ b/style.css
@@ -55,8 +55,8 @@ h1{
 	width: 100%;
 }
 .video{
-	width:90%;
-	height:400px;
+//	width:90%;
+//	height:400px;
 }
 
 iframe {
@@ -66,7 +66,7 @@ iframe {
 }
 
 
-.videoContainer {
+#videoContainer {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -74,11 +74,7 @@ iframe {
   left: 0;
   bottom: 0;
   right: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-	z-index: -1;
+  z-index: -1;
 }
 
 .l-header{
